rust/crates/rax/src/string/rules/snapshots/rax__string__rules__n_in_charset__tests__match.snap
---
source: crates/rax/src/string/rules/n_in_charset.rs
expression: result
---
Ok(
    (
        "abc1",
        "23",
    ),
)
