rust/crates/rax/src/string/rules/snapshots/rax__string__rules__n_in_charset__tests__too_short.snap
---
source: crates/rax/src/string/rules/n_in_charset.rs
expression: result
---
Err(
    "input too short or not enough chars in set",
)
